--- a/app/views/tracked_items/show.html.erb
+++ b/app/views/tracked_items/show.html.erb
@@ -1,14 +1,16 @@
 <div style="display: flex; max-width: 75rem; margin: auto; gap: 3rem">
   <div id="show-page-left-container" class="page-bg-dark">
-    <%= image_tag @tracked_item.image_url, class: "item-image" %>
+    <%= link_to @tracked_item.steam_url, class: "item-image", target: "blank_" do %>
+      <%= image_tag @tracked_item.image_url, class: "item-image" %>
+    <% end %>
     <div class="market-price-container">
+      <%= link_to @tracked_item.steam_url, class: "market-price", target: "blank_" do %>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/Steam_icon_logo.svg" alt="steam logo" style="width: 1.5rem; margin-right: 0.5rem">
+        <%= @tracked_item.steam_listing.min_price %>
+      <% end %>
       <div class="market-price">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/Steam_icon_logo.svg" alt="steam logo" style="width: 1.5rem; margin-right: 0.5rem">
-        <%= @tracked_item.steam_listing.lowest_price %>
-      </div>
-      <div class="market-price">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/Steam_icon_logo.svg" alt="steam logo" style="width: 1.5rem; margin-right: 0.5rem">
-        Skinport Price
+        <%= @tracked_item.skinport_listing.min_price %>
       </div>
       <div class="market-price">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/Steam_icon_logo.svg" alt="steam logo" style="width: 1.5rem; margin-right: 0.5rem">
@@ -46,7 +48,7 @@
             <td>Name</td>
             <td>
               <%= link_to @tracked_item.name, @tracked_item.steam_url, target: "blank_" %>
-              --- <%= link_to "(api)", @tracked_item.steam_listing.price_overview_url, target: "blank", class: "color-secondary"%>
+              --- <%= link_to "(api)", @tracked_item.steam_api_url, target: "blank", class: "color-secondary"%>
             </td>
           </tr>
           <tr>
@@ -55,7 +57,7 @@
           </tr>
           <tr>
             <td>Lowest Price</td>
-            <td><%= @tracked_item.steam_listing.lowest_price %></td>
+            <td><%= @tracked_item.steam_listing.min_price %></td>
           </tr>
           <tr>
             <td>Median Price</td>
@@ -63,11 +65,11 @@
           </tr>
           <tr>
             <td>Last Request Success</td>
-            <td><%= @tracked_item.steam_listing.last_request_success %></td>
+            <td><%= @tracked_item.last_steam_request&.success %></td>
           </tr>
           <tr>
             <td>Last Request Time</td>
-            <td><%= time_ago_in_words(@tracked_item.steam_listing.last_request_time) if @tracked_item.steam_listing.last_request_time %></td>
+            <td><%= time_ago_in_words(@tracked_item.last_steam_request.request_time) if @tracked_item.last_steam_request %></td>
           </tr>
           <tr>
             <td>Created at</td>
@@ -94,7 +96,7 @@
       <pre style="width: 100%">
     <code style="display: block">
       <h3 style="margin: 0">Response to last Steam API request</h3>
-      <%= JSON.pretty_generate(@tracked_item.steam_listing.last_request_response) %>
+      <%= JSON.pretty_generate(@tracked_item.last_steam_request&.response_body) %>
     </code>
   </pre>
     </div>
