--- a/app/views/tracked_items/index.html.erb
+++ b/app/views/tracked_items/index.html.erb
@@ -4,7 +4,7 @@
       <th><%= sortable_column("ID", "id") %></th>
       <th><%= sortable_column("Name", "name") %></th>
       <th><%= sortable_column("Lowest Price", "lowest_price") %></th>
-      <th><%= sortable_column("Volume Sold (24)", "volume_sold") %></th>
+      <th><%= sortable_column("Volume Sold (steam only)", "volume_sold") %></th>
       <th>Refresh</th>
       <th><%= sortable_column("Last Request Time", "last_request_time") %></th>
       <th style="width:min-content; white-space: nowrap">Actions</th>
